--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,11 @@
       "type": "composer",
       "url": "https://wpackagist.org",
       "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
-    }
+    },
+    {
+      "type": "composer",
+      "url": "https://dev.nuuk.fr/satispress/"
+  }
   ],
   "require": {
     "php": ">=7.1",
@@ -38,7 +42,17 @@
     "roots/bedrock-autoloader": "^1.0",
     "roots/wordpress": "5.7",
     "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.0.0"
+    "roots/wp-password-bcrypt": "1.0.0",
+    "wpackagist-plugin/crop-thumbnails": "^1.3",
+    "wpackagist-plugin/safe-svg": "^1.9",
+    "studionuuk/advanced-custom-fields-pro": "^5.9",
+    "wpackagist-plugin/amp": "^2.0",
+    "wpackagist-plugin/advanced-nocaptcha-recaptcha": "^6.1",
+    "wpackagist-plugin/ninja-forms": "^3.5",
+    "wpackagist-plugin/no-category-base-wpml": "^1.3",
+    "wpackagist-plugin/wp-postratings": "^1.89",
+    "wpackagist-plugin/xml-sitemap-feed": "^5.2",
+    "studionuuk/facetwp": "^3.8"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5.8",
