--- a/composer.json
+++ b/composer.json
@@ -1,83 +1,98 @@
 {
-  "name": "roots/bedrock",
-  "type": "project",
-  "license": "MIT",
-  "description": "WordPress boilerplate with modern development tools, easier configuration, and an improved folder structure",
-  "homepage": "https://roots.io/bedrock/",
-  "authors": [
-    {
-      "name": "Scott Walkinshaw",
-      "email": "scott.walkinshaw@gmail.com",
-      "homepage": "https://github.com/swalkinshaw"
-    },
-    {
-      "name": "Ben Word",
-      "email": "ben@benword.com",
-      "homepage": "https://github.com/retlehs"
-    }
-  ],
-  "keywords": [
-    "bedrock", "composer", "roots", "wordpress", "wp", "wp-config"
-  ],
-  "support": {
-    "issues": "https://github.com/roots/bedrock/issues",
-    "forum": "https://discourse.roots.io/category/bedrock"
-  },
-  "repositories": [
-    {
-      "type": "composer",
-      "url": "https://wpackagist.org",
-      "only": ["wpackagist-plugin/*", "wpackagist-theme/*"]
-    },
-    {
-      "type": "composer",
-      "url": "https://dev.nuuk.fr/satispress/"
-  }
-  ],
-  "require": {
-    "php": ">=7.1",
-    "composer/installers": "^1.10",
-    "vlucas/phpdotenv": "^5.3",
-    "oscarotero/env": "^2.1",
-    "roots/bedrock-autoloader": "^1.0",
-    "roots/wordpress": "5.7",
-    "roots/wp-config": "1.0.0",
-    "roots/wp-password-bcrypt": "1.0.0",
-    "wpackagist-plugin/crop-thumbnails": "^1.3",
-    "wpackagist-plugin/safe-svg": "^1.9",
-    "studionuuk/advanced-custom-fields-pro": "^5.9",
-    "wpackagist-plugin/amp": "^2.0",
-    "wpackagist-plugin/advanced-nocaptcha-recaptcha": "^6.1",
-    "wpackagist-plugin/ninja-forms": "^3.5",
-    "wpackagist-plugin/no-category-base-wpml": "^1.3",
-    "wpackagist-plugin/wp-postratings": "^1.89",
-    "wpackagist-plugin/xml-sitemap-feed": "^5.2",
-    "studionuuk/facetwp": "^3.8"
-  },
-  "require-dev": {
-    "squizlabs/php_codesniffer": "^3.5.8",
-    "roave/security-advisories": "dev-master"
-  },
-  "config": {
-    "optimize-autoloader": true,
-    "preferred-install": "dist"
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true,
-  "extra": {
-    "installer-paths": {
-      "web/app/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
-      "web/app/plugins/{$name}/": ["type:wordpress-plugin"],
-      "web/app/themes/{$name}/": ["type:wordpress-theme"]
-    },
-    "wordpress-install-dir": "web/wp"
-  },
-  "scripts": {
-    "post-root-package-install": [
-      "php -r \"copy('.env.example', '.env');\""
+    "name": "roots/bedrock",
+    "type": "project",
+    "license": "MIT",
+    "description": "WordPress boilerplate with modern development tools, easier configuration, and an improved folder structure",
+    "homepage": "https://roots.io/bedrock/",
+    "authors": [
+        {
+            "name": "Scott Walkinshaw",
+            "email": "scott.walkinshaw@gmail.com",
+            "homepage": "https://github.com/swalkinshaw"
+        },
+        {
+            "name": "Ben Word",
+            "email": "ben@benword.com",
+            "homepage": "https://github.com/retlehs"
+        }
     ],
-    "test": [
-      "phpcs"
-    ]
-  }
+    "keywords": [
+        "bedrock",
+        "composer",
+        "roots",
+        "wordpress",
+        "wp",
+        "wp-config"
+    ],
+    "support": {
+        "issues": "https://github.com/roots/bedrock/issues",
+        "forum": "https://discourse.roots.io/category/bedrock"
+    },
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://wpackagist.org",
+            "only": [
+                "wpackagist-plugin/*",
+                "wpackagist-theme/*"
+            ]
+        },
+        {
+            "type": "composer",
+            "url": "https://dev.nuuk.fr/satispress/"
+        }
+    ],
+    "require": {
+        "php": ">=7.1",
+        "composer/installers": "^1.10",
+        "vlucas/phpdotenv": "^5.3",
+        "oscarotero/env": "^2.1",
+        "roots/bedrock-autoloader": "^1.0",
+        "roots/wordpress": "5.7",
+        "roots/wp-config": "1.0.0",
+        "roots/wp-password-bcrypt": "1.0.0",
+        "wpackagist-plugin/crop-thumbnails": "^1.3",
+        "wpackagist-plugin/safe-svg": "^1.9",
+        "studionuuk/advanced-custom-fields-pro": "^5.9",
+        "wpackagist-plugin/amp": "^2.0",
+        "wpackagist-plugin/advanced-nocaptcha-recaptcha": "^6.1",
+        "wpackagist-plugin/ninja-forms": "^3.5",
+        "wpackagist-plugin/no-category-base-wpml": "^1.3",
+        "wpackagist-plugin/wp-postratings": "^1.89",
+        "wpackagist-plugin/xml-sitemap-feed": "^5.2",
+        "studionuuk/facetwp": "^3.8",
+        "yoast/wordpress-seo": "^16.1"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "^3.5.8",
+        "roave/security-advisories": "dev-master"
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist"
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
+    "extra": {
+        "installer-paths": {
+            "web/app/mu-plugins/{$name}/": [
+                "type:wordpress-muplugin"
+            ],
+            "web/app/plugins/{$name}/": [
+                "type:wordpress-plugin"
+            ],
+            "web/app/themes/{$name}/": [
+                "type:wordpress-theme"
+            ]
+        },
+        "wordpress-install-dir": "web/wp"
+    },
+    "scripts": {
+        "post-root-package-install": [
+            "php -r \"copy('.env.example', '.env');\""
+        ],
+        "test": [
+            "phpcs"
+        ]
+    }
 }
