--- a/web/app/themes/tennis-majors-v2/package.json
+++ b/web/app/themes/tennis-majors-v2/package.json
@@ -26,13 +26,14 @@
     "@wordpress/babel-preset-default": "^5.0.1",
     "@wordpress/browserslist-config": "^3.0.1",
     "@wordpress/dependency-extraction-webpack-plugin": "^3.0.1",
+    "autoprefixer": "^10.2.5",
     "babel-eslint": "^10.1.0",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
     "eslint": "^7.20.0",
     "eslint-plugin-import": "^2.22.1",
     "laravel-mix": "^6.0.11",
-    "postcss": "^8.2.6",
+    "postcss": "^8.2.10",
     "sass": "^1.32.7",
     "sass-loader": "11.0.1",
     "stylelint": "^13.10.0",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "jquery": "^3.5.1",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^2.1.1"
   }
 }
