--- a/composer.json
+++ b/composer.json
@@ -48,7 +48,7 @@
         "vlucas/phpdotenv": "^5.3",
         "oscarotero/env": "^2.1",
         "roots/bedrock-autoloader": "^1.0",
-        "roots/wordpress": "5.7",
+        "roots/wordpress": "5.7.1",
         "roots/wp-config": "1.0.0",
         "roots/wp-password-bcrypt": "1.0.0",
         "wpackagist-plugin/crop-thumbnails": "^1.3",
@@ -63,7 +63,9 @@
         "studionuuk/facetwp": "^3.8",
         "yoast/wordpress-seo": "^16.1",
         "studionuuk/sitepress-multilingual-cms": "^4.4",
-        "log1x/acf-composer": "^2.0"
+        "log1x/acf-composer": "^2.0",
+        "roots/soil": "^4.0.4",
+        "studionuuk/acfml": "1.8.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
