--- a/web/app/themes/tennis-majors-v2/composer.json
+++ b/web/app/themes/tennis-majors-v2/composer.json
@@ -45,6 +45,7 @@
     "log1x/poet": "^2.0",
     "log1x/sage-directives": "^1.1",
     "log1x/sage-svg": "^1.0",
+    "mwdelaney/sage-acf-gutenberg-blocks": "^0.7.0",
     "roots/acorn": "2.0.0-alpha.0"
   },
   "require-dev": {
