--- a/web/app/themes/tennis-majors-v2/public/mix-manifest.json
+++ b/web/app/themes/tennis-majors-v2/public/mix-manifest.json
@@ -1,8 +1,18 @@
 {
-    "/scripts/app.js": "/scripts/app.js?id=8464a9e87b17af62a825",
-    "/scripts/customizer.js": "/scripts/customizer.js?id=bc24aff7f98f904fb250",
-    "/scripts/editor.js": "/scripts/editor.js?id=1e670c519ff7ec54afea",
-    "/scripts/manifest.js": "/scripts/manifest.js?id=c7c856d929f212cf2ce0",
-    "/styles/editor.css": "/styles/editor.css?id=f4b0fdb346b8e76431a5",
-    "/styles/app.css": "/styles/app.css?id=54baa4adc1ac927f1557"
+    "/scripts/app.js": "/scripts/app.js?id=57cae3ac19de81758a84",
+    "/scripts/customizer.js": "/scripts/customizer.js?id=4224f336af2c079d7413",
+    "/scripts/editor.js": "/scripts/editor.js?id=341331a4f3beac538145",
+    "/scripts/manifest.js": "/scripts/manifest.js?id=ab155c634bc35ccb4156",
+    "/styles/app.css": "/styles/app.css?id=c5040dfe91dee1a51320",
+    "/styles/editor.css": "/styles/editor.css?id=1f61b0051426f6422fe2",
+    "/scripts/vendor.js": "/scripts/vendor.js?id=5849f514107f74a6e0e4",
+    "/images/arrow-left-white.svg": "/images/arrow-left-white.svg?id=9fa6671fde26bf46c839",
+    "/images/arrow-right-white.svg": "/images/arrow-right-white.svg?id=2e582e5bb6a564bbef95",
+    "/images/little-arrow-bottom.svg": "/images/little-arrow-bottom.svg?id=b6bdafb9ec6efa039371",
+    "/images/little-arrow-left-white.svg": "/images/little-arrow-left-white.svg?id=72d175b19683ba50e01a",
+    "/images/little-arrow-left.svg": "/images/little-arrow-left.svg?id=4e9b30b4b752b9308d24",
+    "/images/little-arrow-right-white.svg": "/images/little-arrow-right-white.svg?id=bbf8ebb17cf6375d398c",
+    "/images/little-arrow-right.svg": "/images/little-arrow-right.svg?id=e34ba4c34430d2f5a5a5",
+    "/images/phone-newsletter-home.png": "/images/phone-newsletter-home.png?id=6acddb6796d07b7cc31d",
+    "/images/quote.png": "/images/quote.png?id=e7c3c15832eaa677860a"
 }
