--- a/composer.json
+++ b/composer.json
@@ -66,7 +66,8 @@
         "log1x/acf-composer": "^2.0",
         "roots/soil": "^4.0.4",
         "studionuuk/acfml": "1.8.2",
-        "wpackagist-plugin/posts-to-posts": "^1.6"
+        "wpackagist-plugin/posts-to-posts": "^1.6",
+        "wpackagist-plugin/co-authors-plus": "^3.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
