--- a/web/app/themes/tennis-majors-v2/public/mix-manifest.json
+++ b/web/app/themes/tennis-majors-v2/public/mix-manifest.json
@@ -1,4 +1,11 @@
 {
+    "/scripts/app.js": "/scripts/app.js?id=136d268ac5b351680039",
+    "/scripts/customizer.js": "/scripts/customizer.js?id=e2287ef34328100916c8",
+    "/scripts/editor.js": "/scripts/editor.js?id=97e324511ecb23fe1e34",
+    "/scripts/manifest.js": "/scripts/manifest.js?id=a9dd7d91e9169b84a121",
+    "/styles/app.css": "/styles/app.css?id=d18d8e21f028e226fb17",
+    "/styles/editor.css": "/styles/editor.css?id=6bf02c0a93a6f977b521",
+    "/scripts/vendor.js": "/scripts/vendor.js?id=2ec4992abbd5d5c4d195",
     "/images/arrow-left-white.svg": "/images/arrow-left-white.svg?id=9fa6671fde26bf46c839",
     "/images/arrow-right-white.svg": "/images/arrow-right-white.svg?id=2e582e5bb6a564bbef95",
     "/images/cart.svg": "/images/cart.svg?id=4802c8a8f6befe83f1fa",
