--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
         "roots/soil": "^4.0.4",
         "studionuuk/acfml": "1.8.2",
         "wpackagist-plugin/posts-to-posts": "^1.6",
-        "wpackagist-plugin/co-authors-plus": "^3.4"
+        "wpackagist-plugin/co-authors-plus": "^3.4",
+        "wpackagist-plugin/bulk-move": "^1.3"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
