--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,8 @@
         "studionuuk/acfml": "1.8.2",
         "wpackagist-plugin/posts-to-posts": "^1.6",
         "wpackagist-plugin/co-authors-plus": "^3.4",
-        "wpackagist-plugin/bulk-move": "^1.3"
+        "wpackagist-plugin/bulk-move": "^1.3",
+        "studionuuk/wpml-string-translation": " 3.1.8"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
