--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,10 @@
         {
             "type": "composer",
             "url": "https://dev.nuuk.fr/satispress/"
+        },
+        {
+            "type": "composer",
+            "url": "https://wp-languages.github.io"
         }
     ],
     "require": {
@@ -68,7 +72,8 @@
         "studionuuk/acfml": "1.8.2",
         "wpackagist-plugin/posts-to-posts": "^1.6",
         "wpackagist-plugin/co-authors-plus": "^3.4",
-        "wpackagist-plugin/bulk-move": "^1.3"
+        "wpackagist-plugin/bulk-move": "^1.3",
+        "koodimonni-language/core-fr_fr": "^5.7"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
@@ -92,6 +97,11 @@
                 "type:wordpress-theme"
             ]
         },
+        "dropin-paths": {
+            "htdocs/wp-content/languages/": ["vendor:koodimonni-language"],
+            "htdocs/wp-content/languages/plugins/": ["vendor:koodimonni-plugin-language"],
+            "htdocs/wp-content/languages/themes/": ["vendor:koodimonni-theme-language"]
+          },        
         "wordpress-install-dir": "web/wp"
     },
     "scripts": {
