--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,8 @@
         "wpackagist-plugin/posts-to-posts": "^1.6",
         "wpackagist-plugin/co-authors-plus": "^3.4",
         "wpackagist-plugin/bulk-move": "^1.3",
-        "koodimonni-language/core-fr_fr": "^5.7"
+        "koodimonni-language/core-fr_fr": "^5.7",
+        "wpackagist-plugin/taxonomy-switcher": "^1.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
@@ -98,10 +99,16 @@
             ]
         },
         "dropin-paths": {
-            "htdocs/wp-content/languages/": ["vendor:koodimonni-language"],
-            "htdocs/wp-content/languages/plugins/": ["vendor:koodimonni-plugin-language"],
-            "htdocs/wp-content/languages/themes/": ["vendor:koodimonni-theme-language"]
-          },        
+            "htdocs/wp-content/languages/": [
+                "vendor:koodimonni-language"
+            ],
+            "htdocs/wp-content/languages/plugins/": [
+                "vendor:koodimonni-plugin-language"
+            ],
+            "htdocs/wp-content/languages/themes/": [
+                "vendor:koodimonni-theme-language"
+            ]
+        },
         "wordpress-install-dir": "web/wp"
     },
     "scripts": {
