--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,6 @@
         {
             "type": "composer",
             "url": "https://dev.nuuk.fr/satispress/"
-        },
-        {
-            "type": "composer",
-            "url": "https://wp-languages.github.io"
         }
     ],
     "require": {
@@ -58,7 +54,6 @@
         "wpackagist-plugin/crop-thumbnails": "^1.3",
         "wpackagist-plugin/safe-svg": "^1.9",
         "studionuuk/advanced-custom-fields-pro": "^5.9",
-        "wpackagist-plugin/amp": "^2.0",
         "wpackagist-plugin/advanced-nocaptcha-recaptcha": "^6.1",
         "wpackagist-plugin/ninja-forms": "^3.5",
         "wpackagist-plugin/no-category-base-wpml": "^1.3",
@@ -72,8 +67,7 @@
         "studionuuk/acfml": "1.8.2",
         "wpackagist-plugin/posts-to-posts": "^1.6",
         "wpackagist-plugin/co-authors-plus": "^3.4",
-        "wpackagist-plugin/bulk-move": "^1.3",
-        "koodimonni-language/core-fr_fr": "^5.7"
+        "wpackagist-plugin/amp": "^2.1"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
@@ -95,17 +89,6 @@
             ],
             "web/app/themes/{$name}/": [
                 "type:wordpress-theme"
-            ]
-        },
-        "dropin-paths": {
-            "htdocs/wp-content/languages/": [
-                "vendor:koodimonni-language"
-            ],
-            "htdocs/wp-content/languages/plugins/": [
-                "vendor:koodimonni-plugin-language"
-            ],
-            "htdocs/wp-content/languages/themes/": [
-                "vendor:koodimonni-theme-language"
             ]
         },
         "wordpress-install-dir": "web/wp"
