--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,8 @@
         "studionuuk/acfml": "1.8.2",
         "wpackagist-plugin/posts-to-posts": "^1.6",
         "wpackagist-plugin/co-authors-plus": "^3.4",
-        "wpackagist-plugin/amp": "^2.1"
+        "wpackagist-plugin/amp": "^2.1",
+        "wpackagist-plugin/wordpress-importer": "^0.7.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
