--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,8 @@
         "wpackagist-plugin/posts-to-posts": "^1.6",
         "wpackagist-plugin/co-authors-plus": "^3.4",
         "wpackagist-plugin/amp": "^2.1",
-        "wpackagist-plugin/wordpress-importer": "^0.7.0"
+        "wpackagist-plugin/wordpress-importer": "^0.7.0",
+        "studionuuk/wpml-string-translation": " 3.1.8"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
