--- a/composer.json
+++ b/composer.json
@@ -68,7 +68,7 @@
         "wpackagist-plugin/posts-to-posts": "^1.6",
         "wpackagist-plugin/co-authors-plus": "^3.4",
         "wpackagist-plugin/amp": "^2.1.2",
-        "wpackagist-plugin/pre-publish-checklist": "1.1.1"
+        "wpackagist-plugin/publishpress-checklists": "^2.5.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
