--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,8 @@
         "wpackagist-plugin/co-authors-plus": "^3.4",
         "wpackagist-plugin/amp": "^2.1.2",
         "wpackagist-plugin/publishpress-checklists": "^2.5.0",
-        "wpackagist-plugin/yoast-test-helper": "^1.14"
+        "wpackagist-plugin/yoast-test-helper": "^1.14",
+        "wpackagist-plugin/classic-editor": "^1.6"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5.8",
